<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<!--    <a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by Freepik - Flaticon</a>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/user_group"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/contact_us"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/contact_info"
            android:textColor="#666666"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            android:elevation="40dp"
            android:layout_margin="10dp"
            android:focusable="true"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/dr_khalid_alkharabsheh" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/dr_khalid_alkharabsheh"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/project_supervisor"
                    android:textSize="25sp"
                    android:textColor="@color/grey" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/mail_icon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/khalid_email"
                        android:textSize="25sp"
                        android:textColor="@color/text_email"
                        />

                </LinearLayout>



            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            android:elevation="40dp"
            android:layout_margin="10dp"
            android:focusable="true"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/horany" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/raneem_waleed_alhorany_se"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/management_developer"
                    android:textSize="25sp"
                    android:textColor="@color/grey" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/mail_icon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/horany_email"
                        android:textSize="25sp"
                        android:textColor="@color/text_email"
                        />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            android:elevation="40dp"
            android:layout_margin="10dp"
            android:focusable="true"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">




                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/islam" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/islam_yanal_abuara_cis"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/front_end_developer"
                    android:textSize="25sp"
                    android:textColor="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/mail_icon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/eslam_eamil"
                        android:textSize="25sp"
                        android:textColor="@color/text_email"
                        />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            android:elevation="40dp"
            android:layout_margin="10dp"
            android:focusable="true"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/dana" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/dana_taha_almasaafe_cis"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/designer"
                    android:textSize="25sp"
                    android:textColor="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/mail_icon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/dana_email"
                        android:textSize="25sp"
                        android:textColor="@color/text_email"
                        />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            android:elevation="40dp"
            android:layout_margin="10dp"
            android:focusable="true"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/raneem" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/raneem_khalid_irtahi_se"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/documentation_specialist"
                    android:textSize="25sp"
                    android:textColor="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/mail_icon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/raneem_email"
                        android:textSize="25sp"
                        android:textColor="@color/text_email"
                        />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>





    </LinearLayout>

</ScrollView>

