<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F8F9FA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/terms_and_conditions"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Last updated: 13/11/2024"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/grey"
            tools:ignore="HardcodedText" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Introduction"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"
            tools:ignore="HardcodedText" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introTerms"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            tools:ignore="VisualLintLongText" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Acceptance of Terms"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"
            tools:ignore="HardcodedText" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AcceptanceInfo"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3. User Responsibilities"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UserResponsibilitiesInfo"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            tools:ignore="VisualLintLongText" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4. Subscriptions and Payments"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SubscriptionsInfo"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="5. Third-Party Services"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"
            tools:ignore="HardcodedText" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ThirdPartyInfo"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="6. Privacy Policy"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrivacyInfo"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            tools:ignore="VisualLintLongText" />

    </LinearLayout>


</ScrollView>