<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Activity.VerifyNumber">

    <ImageView
        android:id="@+id/cardImage"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/email" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_phone_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="25dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_mobile_number_then_we_will_send_you_a_code_to_reset_your_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="20dp"
         />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/VerificationPhoneNumber"
        app:startIconDrawable="@drawable/phone"
        app:startIconTint="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/PhoneNumber"
            android:textColorHint="@color/white"
            android:inputType="phone"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#03A9F4"
        android:id="@+id/VerificationPhoneNumberButton"
        android:gravity="center"
        android:text="Send"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="14dp" />
</LinearLayout>